tests/ui-stable/try_transmute_ref-src-not-immutable-intobytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: zerocopy::IntoBytes` is not satisfied
   --> tests/ui-stable/try_transmute_ref-src-not-immutable-intobytes.rs:19:48
    |
 19 |     let src_not_into_bytes: Result<&AU16, _> = try_transmute_ref!(&NotZerocopy(AU16(0)));
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy<AU16>`
   --> tests/ui-stable/../../zerocopy-derive/tests/include.rs:48:5
    |
 48 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy<AU16>`
    = help: the following other types implement trait `zerocopy::IntoBytes`:
              ()
              AU16
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
            and 67 others
note: required by a bound in `try_transmute_ref`
   --> /app/src/util/macro_util.rs:674:10
    |
672 | pub fn try_transmute_ref<Src, Dst>(src: &Src) -> Result<&Dst, ValidityError<&Src, Dst>>
    |        ----------------- required by a bound in this function
673 | where
674 |     Src: IntoBytes + Immutable,
    |          ^^^^^^^^^ required by this bound in `try_transmute_ref`
    = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy<AU16>: zerocopy::Immutable` is not satisfied
   --> tests/ui-stable/try_transmute_ref-src-not-immutable-intobytes.rs:19:48
    |
 19 |     let src_not_into_bytes: Result<&AU16, _> = try_transmute_ref!(&NotZerocopy(AU16(0)));
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `zerocopy::Immutable` is not implemented for `NotZerocopy<AU16>`
   --> tests/ui-stable/../../zerocopy-derive/tests/include.rs:48:5
    |
 48 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(Immutable)]` to `NotZerocopy<AU16>`
    = help: the following other types implement trait `zerocopy::Immutable`:
              &T
              &mut T
              ()
              *const T
              *mut T
              AU16
              F32<O>
              F64<O>
            and 101 others
note: required by a bound in `try_transmute_ref`
   --> /app/src/util/macro_util.rs:674:22
    |
672 | pub fn try_transmute_ref<Src, Dst>(src: &Src) -> Result<&Dst, ValidityError<&Src, Dst>>
    |        ----------------- required by a bound in this function
673 | where
674 |     Src: IntoBytes + Immutable,
    |                      ^^^^^^^^^ required by this bound in `try_transmute_ref`
    = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
